# qua_play

./: .gitignore  CLAUDE.md  Makefile  Makefile.musl  Makefile.~1~  Makefile_clang  Makefile_gcc  README.md  TODO.txt  dummy.c  generate_alsa_static  make-asound-static  make-asound-static.musl_backup  make-bolt-from-pgo  make-bolt-from-pgo-intel-bloat  make-pgo  make-pgo3  makeall  makeallclean  qua-audio-player.desktop  qua_handler  qua_setup  todo  todos.txt
0. player/: Makefile  Makefile.gcc  asm1.txt  asm2.txt  bin-check.txt  custom_memcpy.h  custom_syscall.h  debug.h  make-asound-static.musl_backup  qua_player.c
1. daemon-socket/: CLAUDE.md  Makefile  PROTOCOL.md  README.md  compile_flags.txt  make-send.sh  notes  qua-cache.c  qua-cache.h  qua-config.h  qua-launcher.c  qua-launcher.h  qua-play.desktop  qua-player-selector.c  qua-player-selector.h  qua-send  qua-send.c  qua-socket  qua-socket.c
1. daemon-sockets/: Makefile  PROTOCOL.md  README.md  qua-send  qua-socket.c
1. signals/: Makefile  qua-signals  qua-signals-vfork.c  qua-signals.c  qua-signals.c.gui-need-to-fix--n-1  qua-signals.c.pre-gtk  qua-signals_1.c
2. launcher/: CLAUDE.md  Makefile  qua-bare-launcher  qua-bare-launcher.c
2. launcher-standalone/: qua-bare-launcher  qua-bare-launcher.c
3. qua-convert/: CLAUDE.md  CONTROL_FLOW.md  Makefile  todo.txt  (+8 more)
6. music-lib/tui-rs/: Cargo.toml
6. music-lib/tui-rs/src/: app.rs  lib.rs  main.rs  view.rs
6. music-lib/tui-rs/src/art/: mod.rs
6. music-lib/tui-rs/src/db/: mod.rs
6. music-lib/tui-rs/src/ui/: layout.rs  mod.rs  sidebar.rs  track_list.rs
(+414 files in other folders)
