[package]
name = "qua-music-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.30"
unicode-width = "0.2"
ratatui-interact = { path = "../ratatui-interact" }
crossterm = "0.29"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5.0"
base64 = "0.22"
image = "0.25"
libc = "0.2"
